// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingSpinner /> render with react node message 1`] = `
<span
  className=""
>
  <i
    aria-hidden="true"
    className="fa fa-spinner fa-pulse"
  />
   
  <div
    className="special-class"
  >
    A div message
  </div>
</span>
`;

exports[`<LoadingSpinner /> render with text message 1`] = `
<span
  className="custom-class"
>
  <i
    aria-hidden="true"
    className="fa fa-spinner fa-pulse"
  />
   
  my message here
</span>
`;

exports[`<LoadingSpinner /> render without properties 1`] = `
<span
  className=""
>
  <i
    aria-hidden="true"
    className="fa fa-spinner fa-pulse"
  />
   
  Loading...
</span>
`;
